Some spell-checking fixes, mostly green now

--- a/tex/22.tex
+++ b/tex/22.tex
@@ -930,18 +930,18 @@ treated implicitly.
 
 The Orr--Sommerfeld equation (see \citet{Orzag1971}) is derived by
 assuming a wave-like disturbance (perturbation) that is proportional to
-$\text{exp}(i(\alpha x-\lambda t))$, where $\lambda$ is an eigenvalue
+$\mathrm{exp}(i(\alpha x-\lambda t))$, where $\lambda$ is an eigenvalue
 (the complex frequency), $\alpha$
 is a prescribed wavenumber (we use $\alpha=1$), $x$ is the streamwise
 direction and $t$ is time. The perturbation is applied to the stream
-function $\psi(x,y,t)$ such that $\psi=\phi(y) \text{exp}(i(\alpha
+function $\psi(x,y,t)$ such that $\psi=\phi(y) \mathrm{exp}(i(\alpha
 x- \lambda t))$, where $\phi$ is the eigenfunction of $\lambda$
 and the $y$-direction is normal to $x$ (we consider only two
 dimensions). Consequently the velocity perturbations are
 \begin{align}
- u'(x,y,t)&=\frac{\partial \psi}{\partial y}=i\alpha \phi \, \text{exp}(i(\alpha x- \lambda t)),
+ u'(x,y,t)&=\frac{\partial \psi}{\partial y}=i\alpha \phi \, \mathrm{exp}(i(\alpha x- \lambda t)),
 \\
- v'(x,y,t)&=-\frac{\partial \psi}{\partial x}=-\phi' \, \text{exp}(i(\alpha x- \lambda t)).
+ v'(x,y,t)&=-\frac{\partial \psi}{\partial x}=-\phi' \, \mathrm{exp}(i(\alpha x- \lambda t)).
 \end{align}
 If we insert this perturbation into the Navier--Stokes equation, an
 eigenvalue problem, the Orr--Sommerfeld equation, will appear. The
@@ -962,9 +962,9 @@ $-1\leqslant y \leqslant 1$, then the perturbed velocity in a parallel
 channel flow equals
 \begin{equation}
 \begin{split}
- u(x,y,t)&=1-y^2+\epsilon \,\text{Re}\left(i\alpha \phi \, \text{exp}(i(\alpha x-\lambda t))\right),
+ u(x,y,t)&=1-y^2+\epsilon \,\text{Re}\left(i\alpha \phi \, \mathrm{exp}(i(\alpha x-\lambda t))\right),
 \\
- v(x,y,t)&=-\epsilon \, \text{Re}\left(\phi' \, \text{exp}(i(\alpha x-\lambda t))\right),
+ v(x,y,t)&=-\epsilon \, \text{Re}\left(\phi' \, \mathrm{exp}(i(\alpha x-\lambda t))\right),
 \end{split}
 \label{eq:mortensen:channel}
 \end{equation}
@@ -1012,7 +1012,7 @@ used as a measure for the accuracy of the solver:
 \end{equation}
 The exact analytical perturbation energy at any time should be
 \begin{equation}
- \frac{E(t)}{E(0)}=\text{exp}(i \text{Imag}(\lambda) t).
+ \frac{E(t)}{E(0)}=\mathrm{exp}(i \mathrm{Imag}(\lambda) t).
 \end{equation}
 Note, however, that we are looking at the energy of the
 \textit{disturbance} only. In other words, we are looking at an
@@ -1088,7 +1088,7 @@ based on the mean velocity ($\Bar{U}=1$~ms$^{-1}$) is varied from 0.5
 to 0.025. Figure \ref{fig:mortensen:OS_init_cfl} shows the accumulated
 error in the perturbation flow energy computed as
 \begin{equation}
- \text{Error} = \sum_{k=0}^N \frac{|E(t_k)-\text{exp}(i \text{Imag}(\lambda) t_k)|}{N}.
+ \text{Error} = \sum_{k=0}^N \frac{|E(t_k)-\mathrm{exp}(i \mathrm{Imag}(\lambda) t_k)|}{N}.
  \label{eq:mortensen:error}
 \end{equation}
 %%
