--- a/book.tex
+++ b/book.tex
@@ -40,9 +40,9 @@
 \input{tex/1}
 
 % Part I: Methodology
-%\input{tex/Part1}
-%\input{tex/2}
-%\input{tex/3}
+\input{tex/Part1}
+\input{tex/2}
+\input{tex/3}
 %\input{tex/4}
 %\input{tex/5}
 %\input{tex/6}
@@ -51,8 +51,8 @@
 %\input{tex/9}
 
 % Part II: Implementation
-%\input{tex/Part2}
-%\input{tex/10}
+\input{tex/Part2}
+\input{tex/10}
 %\input{tex/11}
 %\input{tex/12}
 %\input{tex/13}
