Fixes after running proofreading script, mostly ok now

--- a/tex/16.tex
+++ b/tex/16.tex
@@ -1013,7 +1013,7 @@ entities with respect to entities of larger topological dimension. In
 other words, the UFC specification is only concerned with the ordering
 of incidence relations of the class $d - d'$ where $d > d'$. For
 example, the UFC specification is not concerned with the ordering of
-incidence relations of the class $0 - 1$, that is, the ordering of
+incidence relations of the class $0 - 1$; that is, the ordering of
 edges incident to vertices.
 
 \paragraph{Numbering of mesh entities on intervals.}
