--- a/tex/22.tex
+++ b/tex/22.tex
@@ -31,7 +31,7 @@ of the solvers is validated with the one-dimensional Burgers' equation,
 the Orr--Sommerfeld perturbation in two dimensions and finally the
 three-dimensional unstable and transitional Taylor--Green vortex.
 All solvers and problems can be found as part of the openly
-distributed CBC.PDESys package, see also \cite{Mortensen2011}.
+distributed CBC.PDESys package, see also \citet{Mortensen2011}.
 
 \section{Background}
 
