--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -1181,7 +1181,7 @@ T.~Belytschko and T.~Black.
 \bibitem[Bengzon and Larson(2010)]{BengzonLarson2010}
 F.~Bengzon and M.~G. Larson.
 \newblock Adaptive finite element approximation of multiphysics problems: {A}
-  fluid-structure interaction model problem.
+  fluid--structure interaction model problem.
 \newblock \emph{International Journal for Numerical Methods in Engineering},
   2010.
 
@@ -1669,14 +1669,14 @@ T.~Dunne.
 
 \bibitem[Dunne(2007)]{Dunne2007}
 T.~Dunne.
-\newblock \emph{Adaptive Finite Element Approximation of Fluid-Structure
+\newblock \emph{Adaptive Finite Element Approximation of Fluid--Structure
   Interaction Based on {E}ulerian and Arbitrary {L}agrangian-{E}ulerian
   Variational Formulations}.
 \newblock PhD thesis, Ruprecht-Karls-Universität, Heidelberg, 2007.
 
 \bibitem[Dunne and Rannacher(2006)]{DunneRannacher2006}
 T.~Dunne and R.~Rannacher.
-\newblock Adaptive finite element approximation of fluid-structure interaction
+\newblock Adaptive finite element approximation of fluid--structure interaction
   based on an {E}ulerian variational formulation.
 \newblock \emph{Lecture Notes In Computational Science And Engineering},
   53:\penalty0 110, 2006.
@@ -2200,7 +2200,7 @@ J.~Hoffman and C.~Johnson.
 \bibitem[Hoffman et~al.(2011)Hoffman, Jansson, and
   St\"ockli]{HoffmanJanssonStockli2011}
 J.~Hoffman, J.~Jansson, and M.~St\"ockli.
-\newblock Unified continuum modeling of fluid-structure interaction.
+\newblock Unified continuum modeling of fluid--structure interaction.
 \newblock \emph{Mathematical Models and Methods in Applied Sciences}, 2011.
 
 \bibitem[Hoffman et~al.(2011{\natexlab{a}})Hoffman, Jansson, and
@@ -3009,7 +3009,7 @@ M.~Mortensen, H.~P. Langtangen, and J.~Myre.
   Wells]{Mortensen2011}
 M.~Mortensen, H.~P. Langtangen, and G.~N. Wells.
 \newblock A {FEniCS}-based programming framework for modeling turbulent flow by
-  the {Reynolds}-averaged {Navier-Stokes} equations.
+  the {Reynolds}-averaged {Navier--Stokes} equations.
 \newblock \emph{Advances in Water Resources}, 34\penalty0 (9):\penalty0  1082--1101, 2011.
 \newblock URL \url{http://dx.doi.org/10.1016/j.advwatres.2011.02.013}.
 
@@ -3715,7 +3715,7 @@ H.~A. van~der Vorst.
 
 \bibitem[van~der Zee(2009)]{Van2009}
 K.~G. van~der Zee.
-\newblock \emph{Goal-Adaptive Discretization of Fluid-Structure Interaction}.
+\newblock \emph{Goal-Adaptive Discretization of Fluid--Structure Interaction}.
 \newblock PhD thesis, Delft University of Technology, 2009.
 
 \bibitem[van~der Zee et~al.(2008)van~der Zee, van Brummelen, and
