Make first pages look a bit more like the Springer pages

--- a/book.tex
+++ b/book.tex
@@ -1,11 +1,10 @@
 \documentclass{fenicsbook}
 
-% Book metadata
-%\title{Automated\\ \noindent Scientific\\ \noindent Computing}
-\title{Automated Solution of \\
-       Differential Equations by \\
-       the Finite Element Method}
-\author{Logg, Mardal, Wells (Eds.)}
+% Book metadata: now included in Springer file FM1.tex
+%\title{Automated Solution of \\
+%       Differential Equations by \\
+%       the Finite Element Method}
+%\author{Logg, Mardal, Wells (Eds.)}
 
 % Generate index
 \makeindex
@@ -17,11 +16,11 @@
 % Start front matter
 \frontmatter
 
-% Title page
-\maketitle
+% Title page: now included in Springer file tex/FM1.tex
+%\maketitle
 
-% Copyright page
-\input{frontmatter/copyright}
+% Copyright page: now included in Springer file tex/FM1.tex
+%\input{frontmatter/copyright}
 
 % Table of contents: now included in Springer file tex/FM1.tex
 %\tableofcontents
@@ -37,12 +36,12 @@
 % Chapters
 
 % Tutorial
-\input{tex/1}
+%\input{tex/1}
 
 % Part I: Methodology
-\input{tex/Part1}
-\input{tex/2}
-\input{tex/3}
+%\input{tex/Part1}
+%\input{tex/2}
+%\input{tex/3}
 %\input{tex/4}
 %\input{tex/5}
 %\input{tex/6}
@@ -51,8 +50,8 @@
 %\input{tex/9}
 
 % Part II: Implementation
-\input{tex/Part2}
-\input{tex/10}
+%\input{tex/Part2}
+%\input{tex/10}
 %\input{tex/11}
 %\input{tex/12}
 %\input{tex/13}
@@ -98,7 +97,7 @@
 \backmatter
 \markboth{}{} % prevent chapter title from last chapter to appear here
 
-\input{tex/BM1}
+%\input{tex/BM1}
 
 % The following contents have been included in the Springer file BM1.tex
 
