--- a/tex/FM1.tex
+++ b/tex/FM1.tex
@@ -1,5 +1,100 @@
+% Title page
+\thispagestyle{empty}
+
+\noindent
+{\Large Anders Logg}
+{$\,\,\,^\bullet\,\,\,$}
+{\Large Kent-Andre Mardal}
+{$\,\,\,^\bullet\,\,\,$}
+{\Large Garth N. Wells}
+
+\vspace{1ex}
+
+\noindent
+{\large Editors}
+
+\vspace{11ex}
+
+\noindent
+{\Huge Automated Solution of Differential}
+
+\vspace{2.5ex}
+
+\noindent
+{\Huge Equations by the Finite Element}
+
+\vspace{2ex}
+
+\noindent
+{\Huge Method}
+
+\vspace{6ex}
+
+\noindent
+{\Large
+The FEniCS Book}
+
+\vfill
+
+\noindent
+{\large \tt www.fenicsproject.org}
+
+% Copyright page
+\newpage
+\thispagestyle{empty}
+
+\noindent
+\begin{minipage}{0.5\textwidth}
+  \emph{Editors} \\
+  Anders Logg \\
+  Kent-Andre Mardal \\
+  Simula Research Laboratory \\
+  PO Box 134 \\
+  1325 Lysaker \\
+  Norway \\
+  logg@simula.no \\
+  kent-and@simula.no
+\end{minipage}
+\begin{minipage}{0.5\textwidth}
+  \noindent
+  Garth N. Wells \\
+  University of Cambridge \\
+  Department of Engineering \\
+  Trumpington Street \\
+  CB2 1PZ Cambridge \\
+  United Kingdom \\
+  gnw20@cam.ac.uk \\
+\end{minipage}
+
+\vfill
+
+\noindent
+ISSN 1439-7358 \\
+ISBN 978-3-642-23098-1 \\
+e-ISBN 978-3-642-23099-8 \\
+DOI 10.1007/978-3-642-23099-8
+
+\vspace{2ex}
+
+\noindent
+{\footnotesize Copyright \copyright\ \the\year\ The FEniCS Project.}
+
+\vspace{2ex}
+
+\noindent
+{\footnotesize
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.3 or
+any later version published by the Free Software Foundation; with no
+Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.  A
+copy of the license is included in the chapter entitled "GNU Free
+Documentation License".}
+\index{license}
+
+% Table of contents
 \tableofcontents
 
+% Preface
 \chapter*{Preface}
 
 \thispagestyle{empty}
