Fix typo in Chapter 21 found by Mikael

--- a/book.tex
+++ b/book.tex
@@ -67,7 +67,7 @@
 
 % flow problems
 %\input{tex/20}
-%\input{tex/21}
+\input{tex/21}
 %\input{tex/22}
 %\input{tex/23}
 %\input{tex/24}
@@ -97,7 +97,7 @@
 \backmatter
 \markboth{}{} % prevent chapter title from last chapter to appear here
 
-%\input{tex/BM1}
+\input{tex/BM1}
 
 % The following contents have been included in the Springer file BM1.tex
 
