--- a/tex/21.tex
+++ b/tex/21.tex
@@ -666,11 +666,11 @@ time). Integrating the stress term by parts, one obtains the following
 variational problem: find $(u^n_h, p^n_h)$ in $V_h \times Q_h$ such
 that
 \begin{align}
-    \frac{1}{k_n} \renni{v}{u^n_h - u^{n-1}_h}
+    \renni{v}{D_t^n u_h}
     + \renni{v}{u^{n-\frac{1}{2}}_h \cdot \nabla u^{n-\frac{1}{2}}_h}
     + \renni{\epsilon(v)}{\sigma(u^{n-\frac{1}{2}}_h, p^n_h)}
     - \renni{v}{\nu n \cdot (\nabla u^{n-\frac{1}{2}}_h)^{\top}}_{\partial \Omega}
-    + \renni{v}{\bar{p}n} &= \renni{v}{f}, \\
+    + \renni{v}{\bar{p}n}_{\partial \Omega} &= \renni{v}{f^n}, \\
     \renni{q}{\nabla \cdot u^{n-\frac{1}{2}}_h} &= 0,
 \end{align}
 where $u^{n-\frac{1}{2}}_h = ({u}^n_h + {u}^{n-1}_h) / 2$ and $\bar{p}$ is a
